<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bbbbbbb"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activity.CompareActivity">
    <RelativeLayout
        android:visibility="visible"
        android:id="@+id/topmenuLL"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:background="@drawable/selectlevelbg"
            android:gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/firstNumberTV"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="COMPARE"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="#ffff"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/menuIV"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/menuicon"/>


    </RelativeLayout>


    <LinearLayout
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@id/topmenuLL"
        android:layout_above="@id/buttonLL"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:background="@drawable/frameview"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_margin="10dp"
                android:id="@+id/leftSideRV"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <Button
            android:layout_gravity="center"
            android:textColor="#fff"
            android:textSize="50dp"
            android:textStyle="bold"
            android:text=""
            android:id="@+id/ansBT"
            android:background="@drawable/frame"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <LinearLayout
            android:background="@drawable/frameview"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rightSideRV"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLL"
        android:layout_above="@id/addLL"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:textColor="#fff"
            android:textSize="30dp"
            android:textStyle="bold"
            android:text="@string/greater_sign"
            android:id="@+id/greaterBT"
            android:layout_marginRight="50dp"
            android:background="@drawable/frame"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

        <Button
            android:text="@string/equal_sign"
            android:textColor="#fff"
            android:textSize="30dp"
            android:textStyle="bold"
            android:id="@+id/equalBT"
            android:layout_marginRight="50dp"
            android:background="@drawable/frame"
            android:layout_width="80dp"
            android:layout_height="80dp"/>
        <Button
            android:textColor="#fff"
            android:textSize="30dp"
            android:textStyle="bold"
            android:text="@string/smaller_sign"
            android:id="@+id/smallerBT"
            android:background="@drawable/frame"
            android:layout_width="80dp"
            android:layout_height="80dp"/>



    </LinearLayout>


    <LinearLayout
        android:id="@+id/addLL"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">


        <com.google.android.gms.ads.AdView

            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="bottom"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ads_unit_id">

        </com.google.android.gms.ads.AdView>

    </LinearLayout>


</RelativeLayout>