<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    android:weightSum="10"
    tools:context=".Activity.CompareActivity">

    <RelativeLayout
        android:visibility="visible"
        android:id="@+id/topmenuLL"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:background="@drawable/selectlevelbg"
            android:gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/firstNumberTV"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="#ffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="#ffff"/>


            <TextView
                android:id="@+id/secondNumberTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="#ffff"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equal_sign"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="#ffff"/>


            <TextView
                android:id="@+id/ansNumberTV"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="#ffff"/>


        </LinearLayout>

        <ImageView
            android:id="@+id/menuIV"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/menuicon"/>


    </RelativeLayout>


    <LinearLayout
        android:layout_below="@id/topmenuLL"
        android:layout_above="@id/optionLL"
        android:id="@+id/listdataLL"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:background="@drawable/frameview"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="#fff"
                android:visibility="visible"
                android:id="@+id/leftsideTV"
                android:layout_centerInParent="true"
                android:text=""
                android:textSize="150dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/leftSideRV"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content" />

        </RelativeLayout>


        <Button
            android:layout_gravity="center"
            android:textColor="#fff"
            android:textSize="50dp"
            android:textStyle="bold"
            android:text="@string/add"
            android:id="@+id/ansBT"
            android:background="@drawable/frame"
            android:layout_width="100dp"
            android:layout_height="100dp"/>


        <RelativeLayout
            android:background="@drawable/frameview"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="#fff"
                android:layout_centerInParent="true"
                android:text=""
                android:visibility="visible"
                android:textSize="150dp"
                android:id="@+id/rightSideTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_centerInParent="true"
                android:id="@+id/rightSideRV"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/optionLL"
        android:visibility="visible"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_marginRight="20dp"
                android:background="@drawable/frame"
                android:id="@+id/option1"
                android:textColor="#fff"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text=""/>

            <Button
                android:layout_marginRight="20dp"
                android:background="@drawable/frame"
                android:id="@+id/option2"
                android:layout_width="80dp"
                android:textColor="#fff"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_height="80dp"
                android:text=""/>

            <Button
                android:layout_marginRight="20dp"
                android:background="@drawable/frame"
                android:id="@+id/option3"
                android:layout_width="80dp"
                android:textColor="#fff"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_height="80dp"
                android:text=""/>

            <Button
                android:background="@drawable/frame"
                android:id="@+id/option4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textColor="#fff"
                android:textSize="30dp"
                android:textStyle="bold"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ads_unit_id">

            </com.google.android.gms.ads.AdView>


        </LinearLayout>



    </LinearLayout>




</RelativeLayout>